# Day08_E403_GR_AI

./: .gitignore  main.py  pyproject.toml
data/landing/news/: article_01.json  article_02.json  article_03.json  article_04.json  article_05.json
data/standardized/legal/: Bộ luật Hình sự 2015, số 100_2015_QH13.md  Luật Phòng, chống ma túy 2025, số 120_2025_QH15.md  bo_luat_hinh_su_2015.md  cai_nghien_ma_tuy.md  luat_phong_chong_ma_tuy_2021.md  luat_phong_chong_ma_tuy_2025.md  nghi-dinh-105-2021.md  nghi_dinh_105_2021.md  nghi_dinh_danh_muc_chat_ma_tuy.md
data/standardized/news/: article_01.md  article_02.md  article_03.md  article_04.md  article_05.md
data/vectorstore/3948b223-56aa-4cfc-9b39-1cd11cf0745f/: index_metadata.pickle
group_project/: REPORT_FINAL.md  app.py  data_processor.py  generator.py  reranker.py  retriever.py
src/: docker-compose.yml  task10_generation.py  task1_collect_legal_docs.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py  task8_pageindex_vectorless.py  task9_retrieval_pipeline.py
