[project]
name = "day08-e403-gr-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "crawl4ai>=0.8.9",
    "langchain-text-splitters>=1.1.2",
    "markitdown[docx,pdf]>=0.1.6",
    "pageindex>=0.2.8",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]
